Fix break test for db change